[package]
name = "rectdissect"
version = "0.1.0"
authors = ["tjjfvi <tjjfvi@tjjfvi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either="1.6.1"
chashmap="2.2.2"
rayon="1.5.1"
blake2="0.9.2"

[profile.release]
debug = true
